exports[`invalid(1): a { margin-top: 1px; margin-right: 2px; margin-bottom: 3px; margin-left: 4px; } 1`] = `

  1 | a { margin-top: 1px; margin-right: 2px; margin-bottom: 3px; margin-left: 4px; }

`;

exports[`invalid(1): a { margin-top: 1px; margin-right: 2px; margin-bottom: 3px; margin-left: 4px; } 2`] = `

Message:
> 1 | a { margin-top: 1px; margin-right: 2px; margin-bottom: 3px; margin-left: 4px; }
    |                                                             ^^^^^^^^^^^^^^^^ Use the \`margin\` shorthand instead of its longhand properties.

Output:
  1 | a { margin: 1px 2px 3px 4px; }

`;

exports[`invalid(2): a { MARGIN-TOP: 1px; margin-RIGHT: 2px; Margin-Bottom: 3px; MARGIN-left: 4px; } 1`] = `

  1 | a { MARGIN-TOP: 1px; margin-RIGHT: 2px; Margin-Bottom: 3px; MARGIN-left: 4px; }

`;

exports[`invalid(2): a { MARGIN-TOP: 1px; margin-RIGHT: 2px; Margin-Bottom: 3px; MARGIN-left: 4px; } 2`] = `

Message:
> 1 | a { MARGIN-TOP: 1px; margin-RIGHT: 2px; Margin-Bottom: 3px; MARGIN-left: 4px; }
    |                                                             ^^^^^^^^^^^^^^^^ Use the \`margin\` shorthand instead of its longhand properties.

Output:
  1 | a { margin: 1px 2px 3px 4px; }

`;

exports[`invalid(3): a { outline-color: red; outline-style: solid; outline-width: 1px; } 1`] = `

  1 | a { outline-color: red; outline-style: solid; outline-width: 1px; }

`;

exports[`invalid(3): a { outline-color: red; outline-style: solid; outline-width: 1px; } 2`] = `

Message:
> 1 | a { outline-color: red; outline-style: solid; outline-width: 1px; }
    |                                               ^^^^^^^^^^^^^^^^^^ Use the \`outline\` shorthand instead of its longhand properties.

Output:
  1 | a { outline: 1px solid red; }

`;

exports[`invalid(4): a { row-gap: 1px; column-gap: 2px; } 1`] = `

  1 | a { row-gap: 1px; column-gap: 2px; }

`;

exports[`invalid(4): a { row-gap: 1px; column-gap: 2px; } 2`] = `

Message:
> 1 | a { row-gap: 1px; column-gap: 2px; }
    |                   ^^^^^^^^^^^^^^^ Use the \`gap\` shorthand instead of its longhand properties.

Output:
  1 | a { gap: 1px 2px; }

`;

exports[`invalid(5): a {\n\tmargin-top: 1px;\n\t& b {\n\t\tmargin-top: 1px;\n\t\tmargin-right: 2px;\n\t\tmargin-bottom: 3px;\n\t\tmargin-left: 4px;\n\t}\n\tmargin-right: 2px;\n\tmargin-bottom: 3px;\n\tmargin-left: 4px;\n} 1`] = `

   1 | a {
   2 | 	margin-top: 1px;
   3 | 	& b {
   4 | 		margin-top: 1px;
   5 | 		margin-right: 2px;
   6 | 		margin-bottom: 3px;
   7 | 		margin-left: 4px;
   8 | 	}
   9 | 	margin-right: 2px;
  10 | 	margin-bottom: 3px;
  11 | 	margin-left: 4px;
  12 | }

`;

exports[`invalid(5): a {\n\tmargin-top: 1px;\n\t& b {\n\t\tmargin-top: 1px;\n\t\tmargin-right: 2px;\n\t\tmargin-bottom: 3px;\n\t\tmargin-left: 4px;\n\t}\n\tmargin-right: 2px;\n\tmargin-bottom: 3px;\n\tmargin-left: 4px;\n} 2`] = `

Message:
   1 | a {
   2 | 	margin-top: 1px;
   3 | 	& b {
   4 | 		margin-top: 1px;
   5 | 		margin-right: 2px;
   6 | 		margin-bottom: 3px;
>  7 | 		margin-left: 4px;
     | 		^^^^^^^^^^^^^^^^ Use the \`margin\` shorthand instead of its longhand properties.
   8 | 	}
   9 | 	margin-right: 2px;
  10 | 	margin-bottom: 3px;
  11 | 	margin-left: 4px;
  12 | }

Output:
  1 | a {
  2 | 	margin-top: 1px;
  3 | 	& b {
  4 | 		margin: 1px 2px 3px 4px;
  5 | 	}
  6 | 	margin-right: 2px;
  7 | 	margin-bottom: 3px;
  8 | 	margin-left: 4px;
  9 | }

`;
